[gd_scene load_steps=17 format=3 uid="uid://bnd0ec658wsvo"]

[ext_resource type="Script" uid="uid://j7p8ithjpt57" path="res://addons/hammer/manage_root.gd" id="1_kek77"]
[ext_resource type="Script" uid="uid://c3lclxvs3c0c6" path="res://addons/hammer/menu_root.gd" id="2_4c57u"]
[ext_resource type="Script" uid="uid://ch2fx0nefaom2" path="res://example/menu_item.gd" id="3_efxa6"]
[ext_resource type="Script" uid="uid://dwo2k1gkev88y" path="res://example/menu_second.gd" id="4_dg77c"]
[ext_resource type="Script" uid="uid://fpg84wv7gkn4" path="res://example/item.gd" id="4_efxa6"]
[ext_resource type="Script" uid="uid://lq77ujuwhyjq" path="res://addons/hammer/gui_root.gd" id="5_ycdy4"]
[ext_resource type="Script" uid="uid://1l3yqw3yp36j" path="res://example/option.gd" id="6_efxa6"]
[ext_resource type="Script" uid="uid://dnd3gmk78dssv" path="res://example/gui_player.gd" id="6_w48qg"]
[ext_resource type="Script" uid="uid://cr3va2gavv6ux" path="res://addons/hammer/game_root.gd" id="7_vivmo"]
[ext_resource type="PackedScene" uid="uid://1rdayww5ebh3" path="res://scene/Scene0.tscn" id="8_2cqfq"]
[ext_resource type="PackedScene" uid="uid://dc5hdt84wkldm" path="res://example/player.tscn" id="9_yaehf"]

[sub_resource type="Resource" id="Resource_dg77c"]
script = ExtResource("4_efxa6")
metadata/_custom_type_script = "uid://fpg84wv7gkn4"

[sub_resource type="Resource" id="Resource_efxa6"]
script = ExtResource("6_efxa6")
metadata/_custom_type_script = "uid://1l3yqw3yp36j"

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_c2ibq"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_trn2v"]
sky_material = SubResource("ProceduralSkyMaterial_c2ibq")

[sub_resource type="Environment" id="Environment_j4qnp"]
background_mode = 2
sky = SubResource("Sky_trn2v")
tonemap_mode = 2

[node name="ManageRoot" type="Node" node_paths=PackedStringArray("menu_root", "gui_root", "game_root")]
script = ExtResource("1_kek77")
menu_root = NodePath("MenuRoot")
gui_root = NodePath("GUIRoot")
game_root = NodePath("GameRoot")

[node name="MenuRoot" type="Control" parent="." node_paths=PackedStringArray("default_menu_list")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_4c57u")
default_menu_list = [NodePath("First")]

[node name="First" type="Control" parent="MenuRoot" node_paths=PackedStringArray("item_list_node")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_efxa6")
a = Array[ExtResource("4_efxa6")]([SubResource("Resource_dg77c")])
item_list_node = NodePath("Item")
item_table = PackedStringArray("Archive", "Option", "Exit")

[node name="Title" type="Label" parent="MenuRoot/First"]
layout_mode = 1
anchors_preset = -1
offset_left = 64.0
offset_top = 64.0
offset_right = 448.0
offset_bottom = 192.0
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Hammer"
vertical_alignment = 1

[node name="Item" type="ItemList" parent="MenuRoot/First"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 256.0
offset_right = 384.0
offset_bottom = -64.0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
item_count = 3
item_0/text = "Archive"
item_1/text = "Option"
item_2/text = "Exit"

[node name="Second" type="Control" parent="MenuRoot" node_paths=PackedStringArray("tree_node")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4_dg77c")
a = Array[ExtResource("6_efxa6")]([SubResource("Resource_efxa6")])
tree_node = NodePath("Tree")

[node name="Tree" type="Tree" parent="MenuRoot/Second"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 448.0
offset_top = 64.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2

[node name="GUIRoot" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_ycdy4")

[node name="Player" type="Control" parent="GUIRoot" node_paths=PackedStringArray("health_node")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_w48qg")
health_node = NodePath("Health")
player_node = NodePath("../../GameRoot/Player")

[node name="Health" type="ProgressBar" parent="GUIRoot/Player"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -96.0
offset_right = 384.0
offset_bottom = -64.0
grow_vertical = 0
value = 100.0

[node name="GameRoot" type="Node3D" parent="."]
script = ExtResource("7_vivmo")

[node name="Scene0" parent="GameRoot" node_paths=PackedStringArray("edge_facility_table") instance=ExtResource("8_2cqfq")]
edge_facility_table = {
&"Scene1": NodePath("FacilityRoot/DoorPanel")
}

[node name="Player" parent="GameRoot" instance=ExtResource("9_yaehf")]

[node name="Directional" type="DirectionalLight3D" parent="GameRoot"]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="Environment" type="WorldEnvironment" parent="GameRoot"]
environment = SubResource("Environment_j4qnp")
